ontol/ontol-compiler/test-cases/error/parser/dependency_error.on
use 'fail' as f

//@ src_name=fail
! // ERROR parse error: found `!`, expected one of `use`, `def`, `rel`, `fmt`, `map`
